sjsonnet/test/resources/new_test_suite/error.import_json_lone_high_surrogate.jsonnet.golden
sjsonnet.ParseError: Expected "\"":1:10, found "\\uD800\"}\n"
    at [<root>].(error.import_json_lone_high_surrogate.jsonnet:1:1)
