sjsonnet/test/resources/new_test_suite/error.import_json_lone_high_surrogate.jsonnet
import 'error.import_json_lone_high_surrogate.json'
